# backbonzo

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  readme.md
src/: crypto.rs  database.rs  error.rs  export.rs  file_chunks.rs  lib.rs  main.rs  summary.rs
src/export/: filesystem_walker.rs  mod.rs
tests/: lib.rs
